Fixed margin and spacing issues

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,8 +7,16 @@ body {
   position: relative;
 }
 
-.spg-content {
-  padding: 16% 0 250px 0;
+@media (max-width: 767px) {
+  .spg-content {
+    padding: 100px 0 300px 0;
+  }
+}
+
+@media (min-width: 768px) {
+  .spg-content {
+    padding: 175px 0 250px 0;
+  }
 }
 
 .spg-footer {
